[package]
name = "obs-glitch"
version = "0.1.0"
edition = "2021"
description = "OBS Studio video filter plugin — real-time glitch effects via expression engine"

[lib]
name = "glitch"
crate-type = ["cdylib"]

[dependencies]
obs-sys = "0.3"
glitch-core = { path = "glitch/glitch-core" }
image = { version = "0.25", default-features = false }
rand = "0.8"
rayon = "1.10"

[build-dependencies]
pkg-config = "0.3"
cc = "1"

[profile.release]
lto = true
opt-level = 3
# strip = true  ← DO NOT strip: OBS needs #[no_mangle] symbols (obs_module_load, etc.)
